# libSatsuma

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/.cmake/: satsumaConfig.cmake.in
src/libsatsuma/: Exceptions.hh
src/libsatsuma/Config/: Blossom5.hh.in  Gurobi.hh.in  Version.hh.in
src/libsatsuma/Extra/: Highlevel.cc  Highlevel.hh  json.hh
src/libsatsuma/IO/: read_bimdf.cc  read_bimdf.hh  write_bimdf.cc  write_bimdf.hh
src/libsatsuma/Problems/: BMatching.cc  BMatching.hh  BiFlowGraph.cc  BiFlowGraph.hh  BiMCF.cc  BiMCF.hh  BiMDF.cc  BiMDF.hh  BidirectedGraph.hh  CostFunction.cc  CostFunction.hh  MCF.cc  MCF.hh  Matching.cc  Matching.hh  TJoin.hh
src/libsatsuma/Reductions/: BMatching_to_Matching.cc  BMatching_to_Matching.hh  BiMCF_to_BMatching.cc  BiMCF_to_BMatching.hh  BiMCF_to_MCF.cc  BiMCF_to_MCF.hh  BiMDF_Simplification.cc  BiMDF_Simplification.hh  BiMDF_to_BiMCF.cc  BiMDF_to_BiMCF.hh  OrientableBiMCF_to_MCF.cc  OrientableBiMCF_to_MCF.hh
src/libsatsuma/Solvers/: BiMCFGurobi.cc  BiMCFGurobi.hh  BiMDFDoubleCover.cc  BiMDFDoubleCover.hh  BiMDFGuess.cc  BiMDFGuess.hh  BiMDFGurobi.cc  BiMDFGurobi.hh  BiMDFLowerBound.cc  BiMDFLowerBound.hh  BiMDFRefinement.cc  BiMDFRefinement.hh  EvenBiMDF.cc  EvenBiMDF.hh  MCF.cc  MCF.hh  Matching.cc  Matching.hh  MatchingSolvers.hh  OrientBinet.cc  OrientBinet.hh  TJoinMST.cc  TJoinMST.hh
tests/: CMakeLists.txt  basic.cc
tools/: CMakeLists.txt
tools/basic_solve/: CMakeLists.txt  basic_solve.cc
tools/example/: CMakeLists.txt  example.cc
tools/gen_figures/: CMakeLists.txt  figure.hh  format.hh  gen_figures.cc  graphviz.cc  graphviz.hh  tikz.cc  tikz.hh
